--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
     <meta property="og:url" content="https://psych.advay.ca/" />
     <meta property="og:title" content="IB Psychology Study" />
     <meta property="og:description" content="An interactive diagnostic exercise and study guide for Schizophrenia, designed for IB Psychology." />
-    <meta property="og:image" content="https://psych.advay.ca/banner.svg" />
+    <meta property="og:image" content="/banner.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://psych.advay.ca/" />
     <meta property="twitter:title" content="IB Psychology Study" />
     <meta property="twitter:description" content="An interactive diagnostic exercise and study guide for Schizophrenia, designed for IB Psychology." />
-    <meta property="twitter:image" content="https://psych.advay.ca/banner.svg" />
+    <meta property="twitter:image" content="/banner.png" />
   </head>
   <body>
     <div id="root"></div>
